--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7447,6 +7447,11 @@ a {
 .cid-sbZRxXftuJ .item-subtitle {
   text-align: center;
 }
+.cid-sc6LuFbO8Q {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fff0b0;
+}
 .cid-sbb1TnQ5qD {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -7651,11 +7656,18 @@ a {
   }
 }
 .cid-sbXfYVa2pc {
-  background-image: linear-gradient(135deg, #bed3f9 10%, #4479d9 100%) !important;
+  background-image: url("../../../assets/images/pasted-image-0-1-1028x610.png");
+}
+.cid-sbXfYVa2pc .mbr-section-title {
+  color: #000000;
+}
+.cid-sbXfYVa2pc .mbr-text,
+.cid-sbXfYVa2pc .mbr-section-btn {
+  color: #000000;
 }
 .cid-sbXgEE5Htm {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
 .cid-sbXgEE5Htm .item {
@@ -7687,7 +7699,7 @@ a {
   }
 }
 .cid-sbXjznxzpI {
-  padding-top: 5rem;
+  padding-top: 3rem;
   padding-bottom: 0rem;
   background-color: #fff0b0;
 }
@@ -7706,8 +7718,8 @@ a {
   width: 100%;
 }
 .cid-sbXxsEnyEJ {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #ffcf00;
 }
 @media (max-width: 991px) {
@@ -7724,8 +7736,8 @@ a {
   }
 }
 .cid-sbXxtd6YFu {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #fff0b0;
 }
 @media (max-width: 991px) {
@@ -7745,8 +7757,8 @@ a {
   }
 }
 .cid-sbXxtAnFMG {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   background-color: #ffcf00;
 }
 @media (max-width: 991px) {
@@ -7763,7 +7775,7 @@ a {
   }
 }
 .cid-sbXBeDEExf {
-  padding-top: 5rem;
+  padding-top: 3rem;
   padding-bottom: 0rem;
   background-color: #fff0b0;
 }
@@ -7782,8 +7794,8 @@ a {
   width: 100%;
 }
 .cid-sbXCyPrOEB {
-  padding-top: 2rem;
-  padding-bottom: 5rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
   background-color: #fff0b0;
 }
 .cid-sbXABKVe91 {
