--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8266,6 +8266,17 @@ a {
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
+.cid-scBVwhrayq {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-scBVwhrayq .line {
+  background-color: #6592e6;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
 .cid-scvOn3QWev {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -8486,6 +8497,68 @@ a {
 }
 .cid-scBIj01Sbt img {
   width: 100%;
+}
+.cid-scBVOnsAES {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffe885;
+}
+.cid-scBVT6H7CJ {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #ffe885;
+}
+@media (max-width: 991px) {
+  .cid-scBVT6H7CJ .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-scBVT6H7CJ img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-scBVT6H7CJ .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-scC0Y5WrCo {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #fff0b0;
+}
+@media (max-width: 991px) {
+  .cid-scC0Y5WrCo .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-scC0Y5WrCo .row {
+  flex-direction: row-reverse;
+}
+.cid-scC0Y5WrCo img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-scC0Y5WrCo .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-scBYzmWcEO {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #ffe885;
+}
+@media (max-width: 991px) {
+  .cid-scBYzmWcEO .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-scBYzmWcEO img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-scBYzmWcEO .text-wrapper {
+    padding: 2rem;
+  }
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
